--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "react-animate-text": "^0.4.0",
     "react-animated-bg": "^1.1.2",
     "react-dom": "^16.14.0",
+    "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-router-scroll": "^0.4.4",
     "react-scripts": "^3.4.4",
+    "react-scroll": "^1.8.1",
     "styled-components": "^5.2.1"
   },
   "scripts": {
