--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "babel-eslint": "^10.1.0",
+    "contentful": "^8.1.7",
     "eslint": "^6.7.1",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -15,7 +16,7 @@
     "react-animate-text": "^0.4.0",
     "react-animated-bg": "^1.1.2",
     "react-dom": "^16.14.0",
-    "react-icons": "^4.1.0",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-scroll": "^0.4.4",
