--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "babel-eslint": "^10.1.0",
     "contentful": "^8.1.7",
     "eslint": "^6.7.1",
